--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </header>
 
         <section id="downloads" class="clearfix">
+          <a href="https://github.com/msturgill/razor/releases/latest" id="download-zip" class="button"><span>Download Latest Release</span></a>
           <a href="https://github.com/msturgill/razor" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
