Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/msturgill/razor/releases/latest" id="download-zip" class="button"><span>Latest Release</span></a>
+          <a href="https://github.com/msturgill/razor/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/msturgill/razor/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           <a href="https://github.com/msturgill/razor" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
@@ -33,11 +34,11 @@
           <h3>
 <a name="razor-uo-assistant-tool" class="anchor" href="#razor-uo-assistant-tool"><span class="octicon octicon-link"></span></a>Razor UO Assistant Tool</h3>
 
-<p>Razor requires .NET Framework 4.0 to be available. Most users already have this installed. It can be obtained here if necessary: <a href="http://www.microsoft.com/en-us/download/details.aspx?id=17851">http://www.microsoft.com/en-us/download/details.aspx?id=17851</a></p>
+<p>Razor requires the <a href="http://www.microsoft.com/en-us/download/details.aspx?id=17851">Microsoft .NET Framework 4.0</a> to be available. Most users already have this installed.</p>
 
 <p>Razor is not supported on operating systems older than Windows XP.</p>
 
-<p>The latest Razor releases can be found at <a href="https://github.com/msturgill/razor/releases">https://github.com/msturgill/razor/releases</a></p>
+<p>The latest Razor releases can be found at <a href="https://github.com/msturgill/razor/releases/latest">here</a>.</p>
         </section>
 
         <footer>
