--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <p>Razor is not supported on operating systems older than Windows XP.</p>
 
-<p>The latest Razor releases can be found at <a href="https://github.com/msturgill/razor/releases/latest">here</a>.</p>
+<p>The latest Razor releases can be found <a href="https://github.com/msturgill/razor/releases/latest">here</a>.</p>
         </section>
 
         <footer>
